--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^1.1.0",
     "dompurify": "^1.0.5",
+    "file-saver": "^1.3.8",
     "marked": "^0.4.0",
-    "node-sass-chokidar": "^1.3.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "react-simple-file-input": "^2.1.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "deep-freeze": "^0.0.1",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "1.13.6"
   }
 }
